--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@ TRACKING_STRATEGY=segment
 # already exist on the host filesystem and MUST be parents of *_ROOT.
 # Issue: https://github.com/airbytehq/airbyte/issues/577
 HACK_LOCAL_ROOT_PARENT=/tmp
+# This variable allows to generate links to the UI from error logs & notifications
 WEBAPP_URL=http://localhost:8000/
-API_URL=http://localhost:8001/api/v1/
+# When this variable is empty, the UI will automatically use the same host on port 8001 for the API
+API_URL=
 TEMPORAL_HOST=airbyte-temporal:7233
